--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
-  <title>@Keyframe</title>
+  <title>@Keyframes</title>
 </head>
 
 <body>
